# Yan-CG-homework1

./: .gitignore  CMakeLists.txt  Clean  Make  README.md
src/: Triangle.cpp  main.cpp  rasterizer.cpp
src/include/: Triangle.hpp  rasterizer.hpp
